~ "Search Parameters" button is now hidden by default to avoid confusion [WiZaRd]
~ "Search Parameters" button is now properly hidden even if the windows don't match [WiZaRd]
! fixed "uploading" label in upper list - thx to SS1900 [WiZaRd]
~ reverted firewall checks to once per hour [WiZaRd]
! fixed part status exchange on part files [WiZaRd]
! applied latest AICH hash fixes from 0.50b repo [WiZaRd]
~ ignore ports being in "shutdown" state when checking if they are already in use [WiZaRd]
! fixed a bug in source exchange introduced with extended XS [WiZaRd]
+ proxy connections are now displayed in the status bar [Tuxman]
~ applied corruptionblackbox rewrite from WARP as it may be needed for SCT [WiZaRd]
~ added missing default settings for extXS, IPv6, NAT-T [WiZaRd]
! fixed URL downloads (broken due to NAT-T) [WiZaRd]
~ fixed SCT part status sending [WiZaRd]
~ fixed SCT part status display [WiZaRd]
~ store default .ini only values [WiZaRd]
- removed SNARL log notifications [WiZaRd]
! fixed wrong comment icons in sharedfilelist - thx to SS1900 [WiZaRd]
~ save nodes.dat regularly [WiZaRd]
~ always save .dmp files [WiZaRd]
~ additional debug output on AICH requests/answers [WiZaRd]
~ additional debug log line on FW recheck [WiZaRd]
~ crumbs (partial parts) are now always shown to supporting clients [WiZaRd]
~ improved upload buffering to 1...6 blocks buffer [WiZaRd]
! added proper threadhandling for AICH sync thread to prevent crashes on exit [WiZaRd]
+ added possibility to switch off folder support when creating ed2k links [WiZaRd]
+ added possibility to add a friend comment [WiZaRd]
~ friend data will now be available even if the friend is offline - as long as we did connect to it, once [WiZaRd]
+ added possibility to adjust iSOTN via kMule.ini [WiZaRd]
 * "iSOTNMode=-1/0/1" in the kMule.ini file, default is -1 which means "per file", 0 = OFF, 1 = ON


* IPv6 support is currently disabled [WiZaRd]
* NAT-T support is currently disabled [WiZaRd]